---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 2025-10-18
  Changes:
    - Compatibility with Factorissimo 3 thanks to LIMachi
    - Fixed asteroid collecting giving items to the chest even when its already full
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2025-10-18
  Changes:
    - Reworked warp transition
    - Changed sounds for big wave and next planet
    - Added setting to disable next planet chat message
    - Changed how is next planet selected
    - No more extra time on aquilo
    - Fix hexagon shape
    - Reworked collecting asteroids to allow for more defense
    - Make some researches cheaper
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 2025-09-04
  Changes:
    - Removed surface conditions from asteroid collectors
    - Add new technology for repairing ground platform
    - Make timer on aquilo longer
    - Make it that if you hop between only 2 planets it will get harder
    - You can now disable next planet sound in settings
    - Remove warptorio enemies (I need to remake them)
    - Make sure that flamethrowerand tesla tower will freeze on aquilo
    - Add setting to remove recipes based on surface conditions on warp (default false for now)
    - Trains will be now automatic on warp It is still bad but better
    - Warp station has to be last in the queue if you want to use this
    - Fixed map gen on some planets it should be more random now
    - Made beacons a lot more powerfull and accept quality. This should help with space issues
    - Make it possible to start at 100% evolution
    - Updated RU translation thanks to Jimmy
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2025-08-16
  Changes: