@@ -4,6 +4,7 @@ Date: 2025-10-18
   Changes:
     - Compatibility with Factorissimo 3 thanks to LIMachi
     - Fixed asteroid collecting giving items to the chest even when its already full
+    - Fix teleporting with factory floor level 0
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.10
 Date: 2025-10-18
